# bcmd

./: Cargo.toml  README.md
src/: main.rs
tests/: cli.rs
