[package]
name = "bcmd"
version = "0.1.0"
authors = ["ZxStim <zxstim@blockcmd.com>"]
edition = "2021"
license = "MIT"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/zxstim/bcmd"
repository = "https://github.com/zxstim/bcmd"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "grrs"
path = "src/main.rs"

[dependencies]
clap = { version="4.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0.13"
assert_fs = "1.1.1"
predicates = "3.1.0"